--- a/src/dbpedia.ipynb
+++ b/src/dbpedia.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -150,7 +150,7 @@
        "  'ordered': True}}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -172,7 +172,7 @@
        "{'link': [], 'vars': ['s', 'author']}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -194,7 +194,7 @@
        "dict_keys(['distinct', 'ordered', 'bindings'])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
@@ -255,7 +255,7 @@
        "   'value': 'http://dbpedia.org/resource/Beyond_This_Horizon'}}]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -278,7 +278,7 @@
        "   'value': 'http://dbpedia.org/resource/The_Wonderful_Wizard_of_Oz'}}]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +360,7 @@
        "  'ordered': True}}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,9 @@
     "        ontology:author ?author .\n",
     "    FILTER regex(str(?book), \"%s\") .\n",
     "    OPTIONAL {\n",
-    "        ?author ontology:birthDate ?date .\n",
+    "         ?author ontology:birthDate ?date .\n",
+    "    }\n",
+    "    OPTIONAL {\n",
     "        ?book dbpedia:country ?country .\n",
     "    }\n",
     "}\n",
@@ -400,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -410,12 +412,22 @@
        " 'results': {'bindings': [{'author': {'type': 'uri',\n",
        "     'value': 'http://dbpedia.org/resource/L._Frank_Baum'},\n",
        "    'book': {'type': 'uri',\n",
-       "     'value': 'http://dbpedia.org/resource/The_Wonderful_Wizard_of_Oz'}}],\n",
+       "     'value': 'http://dbpedia.org/resource/The_Wonderful_Wizard_of_Oz'},\n",
+       "    'date': {'datatype': 'http://www.w3.org/2001/XMLSchema#date',\n",
+       "     'type': 'typed-literal',\n",
+       "     'value': '1856-05-15'}},\n",
+       "   {'author': {'type': 'uri',\n",
+       "     'value': 'http://dbpedia.org/resource/L._Frank_Baum'},\n",
+       "    'book': {'type': 'uri',\n",
+       "     'value': 'http://dbpedia.org/resource/The_Wonderful_Wizard_of_Oz'},\n",
+       "    'date': {'datatype': 'http://www.w3.org/2001/XMLSchema#date',\n",
+       "     'type': 'typed-literal',\n",
+       "     'value': '1856-5-15'}}],\n",
        "  'distinct': False,\n",
        "  'ordered': True}}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -426,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -438,10 +450,13 @@
     "PREFIX dbo: <http://dbpedia.org/ontology/>\n",
     "PREFIX dbpedia-owl: <http://dbpedia.org/ontology/>\n",
     "\n",
-    "SELECT ?author\n",
+    "SELECT ?author ?date\n",
     "WHERE {\n",
     "    ?author dbo:child ?child\n",
     "    FILTER regex(str(?child), \"%s\") .\n",
+    "     \n",
+    "    ?author dbo:birthDate ?date .\n",
+    "    \n",
     "}\n",
     "LIMIT 10\n",
     "\"\"\" % name\n",
@@ -450,38 +465,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'head': {'link': [], 'vars': ['author']},\n",
+       "{'head': {'link': [], 'vars': ['author', 'date']},\n",
        " 'results': {'bindings': [{'author': {'type': 'uri',\n",
-       "     'value': 'http://dbpedia.org/resource/Esther_Edwards_Burr'}},\n",
+       "     'value': 'http://dbpedia.org/resource/Aaron_Burr'},\n",
+       "    'date': {'datatype': 'http://www.w3.org/2001/XMLSchema#date',\n",
+       "     'type': 'typed-literal',\n",
+       "     'value': '1756-02-06'}},\n",
        "   {'author': {'type': 'uri',\n",
-       "     'value': 'http://dbpedia.org/resource/Paul_de_Leeuw'}},\n",
+       "     'value': 'http://dbpedia.org/resource/Aaron_Burr'},\n",
+       "    'date': {'datatype': 'http://www.w3.org/2001/XMLSchema#date',\n",
+       "     'type': 'typed-literal',\n",
+       "     'value': '1756-2-6'}},\n",
        "   {'author': {'type': 'uri',\n",
-       "     'value': 'http://dbpedia.org/resource/Sarathi_Baba'}},\n",
+       "     'value': 'http://dbpedia.org/resource/Alice_Walker'},\n",
+       "    'date': {'datatype': 'http://www.w3.org/2001/XMLSchema#date',\n",
+       "     'type': 'typed-literal',\n",
+       "     'value': '1944-02-09'}},\n",
        "   {'author': {'type': 'uri',\n",
-       "     'value': 'http://dbpedia.org/resource/Thomas_Boleyn,_1st_Earl_of_Wiltshire'}},\n",
+       "     'value': 'http://dbpedia.org/resource/Alice_Walker'},\n",
+       "    'date': {'datatype': 'http://www.w3.org/2001/XMLSchema#date',\n",
+       "     'type': 'typed-literal',\n",
+       "     'value': '1944-0-0'}},\n",
        "   {'author': {'type': 'uri',\n",
-       "     'value': 'http://dbpedia.org/resource/Nigel_Powers'}},\n",
+       "     'value': 'http://dbpedia.org/resource/Allen_G._Thurman'},\n",
+       "    'date': {'datatype': 'http://www.w3.org/2001/XMLSchema#date',\n",
+       "     'type': 'typed-literal',\n",
+       "     'value': '1813-11-13'}},\n",
        "   {'author': {'type': 'uri',\n",
-       "     'value': 'http://dbpedia.org/resource/Lewis_Elton'}},\n",
+       "     'value': 'http://dbpedia.org/resource/Andie_MacDowell'},\n",
+       "    'date': {'datatype': 'http://www.w3.org/2001/XMLSchema#date',\n",
+       "     'type': 'typed-literal',\n",
+       "     'value': '1958-04-21'}},\n",
        "   {'author': {'type': 'uri',\n",
-       "     'value': 'http://dbpedia.org/resource/Benzion_Netanyahu'}},\n",
+       "     'value': 'http://dbpedia.org/resource/Andie_MacDowell'},\n",
+       "    'date': {'datatype': 'http://www.w3.org/2001/XMLSchema#date',\n",
+       "     'type': 'typed-literal',\n",
+       "     'value': '1958-4-21'}},\n",
        "   {'author': {'type': 'uri',\n",
-       "     'value': 'http://dbpedia.org/resource/Lee_Hoi-chuen'}},\n",
+       "     'value': 'http://dbpedia.org/resource/Andrew_Lloyd_Webber'},\n",
+       "    'date': {'datatype': 'http://www.w3.org/2001/XMLSchema#date',\n",
+       "     'type': 'typed-literal',\n",
+       "     'value': '1948-03-22'}},\n",
        "   {'author': {'type': 'uri',\n",
-       "     'value': 'http://dbpedia.org/resource/Joe_Keaton'}},\n",
+       "     'value': 'http://dbpedia.org/resource/Andrew_Lloyd_Webber'},\n",
+       "    'date': {'datatype': 'http://www.w3.org/2001/XMLSchema#date',\n",
+       "     'type': 'typed-literal',\n",
+       "     'value': '1948-3-22'}},\n",
        "   {'author': {'type': 'uri',\n",
-       "     'value': 'http://dbpedia.org/resource/Myra_Keaton'}}],\n",
+       "     'value': 'http://dbpedia.org/resource/Antonio_Stradivari'},\n",
+       "    'date': {'datatype': 'http://www.w3.org/2001/XMLSchema#date',\n",
+       "     'type': 'typed-literal',\n",
+       "     'value': '1644-1-1'}}],\n",
        "  'distinct': False,\n",
        "  'ordered': True}}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -546,7 +591,7 @@
        "X(name='John Smith', hometown=X(name='New York', id=123))"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -574,8 +619,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-19-122cd9f84e79>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mjson2obj\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresults\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-18-69cde552c962>\u001b[0m in \u001b[0;36mjson2obj\u001b[0;34m(data)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mjson2obj\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobject_hook\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0m_json_object_hook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson2obj\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-18-122cd9f84e79>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mjson2obj\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresults\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-17-69cde552c962>\u001b[0m in \u001b[0;36mjson2obj\u001b[0;34m(data)\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mjson2obj\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobject_hook\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0m_json_object_hook\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mjson2obj\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;32m/Library/Frameworks/Python.framework/Versions/3.6/lib/python3.6/json/__init__.py\u001b[0m in \u001b[0;36mloads\u001b[0;34m(s, encoding, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[1;32m    346\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mbytes\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbytearray\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    347\u001b[0m             raise TypeError('the JSON object must be str, bytes or bytearray, '\n\u001b[0;32m--> 348\u001b[0;31m                             'not {!r}'.format(s.__class__.__name__))\n\u001b[0m\u001b[1;32m    349\u001b[0m         \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdetect_encoding\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'surrogatepass'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    350\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mTypeError\u001b[0m: the JSON object must be str, bytes or bytearray, not 'dict'"
      ]
