--- a/SentimentAnalysis.ipynb
+++ b/SentimentAnalysis.ipynb
@@ -26,18 +26,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8\n",
-      "Index(['00053.txt', '00055.txt', '00054.txt', '00056.txt', '00057.txt',\n",
-      "       '00059.txt', '00058.txt', '00060.txt'],\n",
+      "11\n",
+      "Index(['570.txt', '564.txt', '558.txt', '559.txt', '561.txt', '560.txt',\n",
+      "       '562.txt', '563.txt', '557.txt', '556.txt', '564-0.txt'],\n",
       "      dtype='object', name='filename')\n",
-      "8 8 8 8\n"
+      "11 11 11 11\n"
      ]
     }
    ],
@@ -105,7 +105,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "data = pd.read_csv('data/output/tard.csv', index_col=0)\n"
