rename data-folder -> datasets

--- a/src/preprocessing-2.ipynb
+++ b/src/preprocessing-2.ipynb
@@ -26,6 +26,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# local modules\n",
+    "import sparql"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -117,57 +127,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def search(query):\n",
-    "    # results :: dict\n",
-    "    sparql = SPARQLWrapper(\"http://dbpedia.org/sparql\")\n",
-    "    sparql.setQuery(query)\n",
-    "    sparql.setReturnFormat(JSON)\n",
-    "    results = sparql.query().convert()\n",
-    "    return results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def book_info_alt(title='The_Wonderful_Wizard_of_Oz'):\n",
-    "    query = \"\"\"\n",
-    "PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>\n",
-    "PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>\n",
-    "PREFIX dbpedia: <http://dbpedia.org/resource/>\n",
-    "PREFIX ontology: <http://dbpedia.org/ontology/>\n",
-    "PREFIX dbpedia-owl: <http://dbpedia.org/ontology/>\n",
-    "\n",
-    "SELECT ?book ?title ?author ?date1 ?date ?country\n",
-    "WHERE {\n",
-    "    ?book rdf:type ontology:Book;\n",
-    "        ontology:author ?author .\n",
-    "    FILTER regex(str(?book), \"%s\") .\n",
-    "    OPTIONAL {\n",
-    "         ?book ontology:releaseDate ?date1 .\n",
-    "    }\n",
-    "    OPTIONAL {\n",
-    "         ?author ontology:birthDate ?date .\n",
-    "    }\n",
-    "    OPTIONAL {\n",
-    "        ?book dbpedia:country ?country .\n",
-    "    }\n",
-    "}\n",
-    "LIMIT 1\n",
-    "\"\"\" % title\n",
-    "    return search(query)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 29,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -215,12 +178,12 @@
     }
    ],
    "source": [
-    "for info in data:\n",
-    "    title = info[1]\n",
-    "    print(title)\n",
-    "    title = title.replace(' ','_')\n",
-    "    info = book_info_alt(title)\n",
-    "    print(info)"
+    "# for info in data:\n",
+    "#     title = info[1]\n",
+    "#     print(title)\n",
+    "#     title = title.replace(' ','_')\n",
+    "#     info = book_info_alt(title)\n",
+    "#     print(info)"
    ]
   },
   {
