--- a/SentimentAnalysis.ipynb
+++ b/SentimentAnalysis.ipynb
@@ -2,19 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [],
    "source": [
     "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
+    "\n",
     "import os\n",
     "from nltk.tokenize import sent_tokenize\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
-    "\n"
+    "import seaborn as sns\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First we create a dictionary with all positive and negative words and their sentiment scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    " def make_lex_dict(lexicon_file):\n",
+    "        \"\"\"\n",
+    "        Convert lexicon file to a dictionary\n",
+    "        \"\"\"\n",
+    "        lex_dict = {}\n",
+    "        for line in lexicon_file.split('\\n'):\n",
+    "            (word, measure) = line.strip().split('\\t')[0:2]\n",
+    "            lex_dict[word] = float(measure)\n",
+    "        return lex_dict\n",
+    "    \n",
+    "sent_dict = make_lex_dict(open('src/vader_lexicon.txt', 'r').read())\n"
    ]
   },
   {
@@ -26,18 +50,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11\n",
-      "Index(['570.txt', '564.txt', '558.txt', '559.txt', '561.txt', '560.txt',\n",
-      "       '562.txt', '563.txt', '557.txt', '556.txt', '564-0.txt'],\n",
+      "6\n",
+      "Index(['9915.txt', '9914.txt', '9916.txt', '9915-8.txt', '9917-8.txt',\n",
+      "       '9916-8.txt'],\n",
       "      dtype='object', name='filename')\n",
-      "11 11 11 11\n"
+      "6 6 6 6\n"
      ]
     }
    ],
@@ -99,7 +123,68 @@
     "    data.to_csv('data/output/tard.csv')\n",
     "    \n",
     "analyser = SentimentIntensityAnalyzer()                    \n",
-    "sentiment_analysis('data/output/')"
+    "sentiment_analysis('data/test/')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We also want to count the amount of positive and negative words as features"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "587 496\n",
+      "461 261\n",
+      "1841 876\n",
+      "587 496\n",
+      "2278 1168\n",
+      "1841 876\n"
+     ]
+    }
+   ],
+   "source": [
+    "def count_sentiment_words(directory):\n",
+    "    list_pos_words = []\n",
+    "    list_neg_words = []\n",
+    "    pos_list = []\n",
+    "    neg_list = []\n",
+    "    \n",
+    "    data = pd.read_csv('data/output/tard.csv', index_col=0)\n",
+    "\n",
+    "    for filename in os.listdir(directory):\n",
+    "        pos_count = 0\n",
+    "        neg_count = 0\n",
+    "        \n",
+    "        if filename.endswith(\".txt\"):\n",
+    "            text = open(os.path.join(directory, filename), 'r', errors='replace')\n",
+    "            for line in text.readlines():\n",
+    "                for word in line.split(\" \"):\n",
+    "                    if word in sent_dict:\n",
+    "                        if sent_dict[word] >= 0:\n",
+    "                            pos_count += 1\n",
+    "                            list_pos_words.append(word)\n",
+    "                        else:\n",
+    "                            neg_count += 1\n",
+    "                            list_neg_words.append(word)\n",
+    "               \n",
+    "            pos_list.append(pos_count)\n",
+    "            neg_list.append(neg_count)\n",
+    "            \n",
+    "    data['amt pos'] = pos_list \n",
+    "    data['amt neg'] = neg_list\n",
+    "    \n",
+    "    data.to_csv('data/output/tard.csv')\n",
+    "     \n",
+    "count_sentiment_words('data/test/')"
    ]
   },
   {
@@ -112,6 +197,15 @@
    "source": [
     "data = pd.read_csv('data/output/tard.csv', index_col=0)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
