--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -122,17 +122,12 @@
      "output_type": "stream",
      "text": [
       ".DS_Store\n",
-      "570.txt\n",
-      "564.txt\n",
-      "558.txt\n",
-      "559.txt\n",
-      "561.txt\n",
-      "560.txt\n",
-      "562.txt\n",
-      "563.txt\n",
-      "557.txt\n",
-      "556.txt\n",
-      "564-0.txt\n"
+      "9915.txt\n",
+      "9914.txt\n",
+      "9916.txt\n",
+      "9915-8.txt\n",
+      "9917-8.txt\n",
+      "9916-8.txt\n"
      ]
     }
    ],
