--- a/src/preprocessing-3.ipynb
+++ b/src/preprocessing-3.ipynb
@@ -17,6 +17,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### is dit een oud bestand?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "First we create an empty CSV file with the colums to fill."
    ]
   },
