--- a/src/SentimentAnalysis-2.ipynb
+++ b/src/SentimentAnalysis-2.ipynb
@@ -19,6 +19,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### is dit een oud bestand?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "First we create a dictionary with all positive and negative words and their sentiment scores"
    ]
   },
@@ -233,7 +240,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
