--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -185,6 +185,7 @@
    ],
    "source": [
     "data = pd.read_csv('data/output/tard.csv', index_col=0)\n",
+    "print(data['title'] = \n",
     "data['release year'].plot.hist(alpha=0.5, bins=100, range=[1900,2020])\n",
     "plt.show()"
    ]
