added genre extraction

--- a/src/SentimentAnalysis.ipynb
+++ b/src/SentimentAnalysis.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
@@ -63,7 +65,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def return_sentiment_scores(sentence):\n",
@@ -73,7 +77,7 @@
     "\n",
     "def sentiment_analysis(directory):\n",
     "    # returns the sentiment of every book in the directory\n",
-    "    data = pd.read_csv(config.dataset_dir + 'output/tard.csv', index_col=0)\n",
+    "    data = pd.read_csv(config.dataset_dir + 'output/bookdata_alt.csv', index_col=0)\n",
     "    print(len(data.index))\n",
     "    max_amt = len(data.index) + 1\n",
     "    print(data.index, len(os.listdir(directory)))\n",
@@ -470,14 +474,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -498,7 +506,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
