--- a/src/side-info.ipynb
+++ b/src/side-info.ipynb
@@ -61,7 +61,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "filename = config.dataset_dir + '/output/bookdata_alt.csv'\n",
@@ -72,7 +74,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "keys, _ = sparql.book_info()"
@@ -82,6 +86,7 @@
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -157,7 +162,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "for title in unknown_titles:\n",
@@ -222,20 +229,90 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "create a file that stores the unique genres"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Fairy tale', 'Historical Novel', 'Bush poetry', 'Science Fantasy', 'Thriller (genre)', 'Utopian novel', 'Romance novel', 'Nonsense poetry', \"Children's fiction\", 'Bildungsroman', 'Gothic fiction', 'Literary realism', 'Gothic novel', 'Fantasy', 'Biographical novel', 'Spiritual autobiography', 'Short story cycle', 'Novel', 'Ruritanian romance', 'Detective fiction', 'War novel', 'Horror novel', 'Essay', 'Adventure novel', 'Mystery novel', 'Nature writing', 'Non-Fiction', 'Historical novel', 'Fiction', 'Short stories', 'Adventure fiction', 'Science fiction', 'Short story', 'unknown', 'Poetry', 'Comedy novel', 'Autobiography', \"Children's literature\", 'Juvenile literature', 'Science fantasy', 'Novel of manners', 'Autobiographical novel', 'Christian mythology', 'Satire', 'Fantasy novel', \"Children's book\", 'Christian Apologetics', 'Theodicy', 'Chivalric romance', 'Travel literature', 'Planetary romance', 'Photography', \"Children's novel\", 'Historical fiction', 'Lost World (genre)', 'Philosophical fiction', 'Young adult novel', 'Non-fiction', 'Crime fiction', 'History', 'Novella', 'Horror fiction'}\n"
+      "Non-fiction\n",
+      "Fantasy\n",
+      "Planetary romance\n",
+      "Thriller (genre)\n",
+      "Novel\n",
+      "Short story cycle\n",
+      "Young adult novel\n",
+      "Chivalric romance\n",
+      "War novel\n",
+      "Novella\n",
+      "Short story\n",
+      "Photography\n",
+      "Poetry\n",
+      "Christian Apologetics\n",
+      "unknown\n",
+      "Mystery novel\n",
+      "Detective fiction\n",
+      "Gothic fiction\n",
+      "Historical novel\n",
+      "Horror novel\n",
+      "Autobiographical novel\n",
+      "Short stories\n",
+      "Autobiography\n",
+      "Bildungsroman\n",
+      "Science fantasy\n",
+      "Science Fantasy\n",
+      "Biographical novel\n",
+      "Historical Novel\n",
+      "Fairy tale\n",
+      "Utopian novel\n",
+      "Children's book\n",
+      "Horror fiction\n",
+      "Spiritual autobiography\n",
+      "Crime fiction\n",
+      "Non-Fiction\n",
+      "Satire\n",
+      "Nature writing\n",
+      "Children's literature\n",
+      "Nonsense poetry\n",
+      "Children's fiction\n",
+      "Novel of manners\n",
+      "Christian mythology\n",
+      "Romance novel\n",
+      "Travel literature\n",
+      "Children's novel\n",
+      "Fantasy novel\n",
+      "Theodicy\n",
+      "Essay\n",
+      "Lost World (genre)\n",
+      "Juvenile literature\n",
+      "Historical fiction\n",
+      "Philosophical fiction\n",
+      "Adventure fiction\n",
+      "History\n",
+      "Ruritanian romance\n",
+      "Science fiction\n",
+      "Bush poetry\n",
+      "Fiction\n",
+      "Comedy novel\n",
+      "Literary realism\n",
+      "Adventure novel\n",
+      "Gothic novel\n"
      ]
     }
    ],
    "source": [
-    "print(unique_genres)"
+    "genres_file = open(config.dataset_dir +'output/unique_genres.txt', 'w')\n",
+    "for item in unique_genres:\n",
+    "    print(item)\n"
    ]
   },
   {
