--- a/src/preprocessing.ipynb
+++ b/src/preprocessing.ipynb
@@ -12556,13 +12556,7 @@
       "['2537.txt', 'The Pocket R.L.S.', 'Robert Louis Stevenson', 'March, 2001']\n",
       "['41559.txt', 'The New Christianity', 'Salem Goldworth Bland', 'December 04, 2012 ']\n",
       "['40710-8.txt', \"A Summer's Outing\", 'Carter H. Harrison', 'September 8, 2012 ']\n",
-      "['4146.txt', 'Diary of Samuel Pepys, January/February 1663/64', 'Samuel Pepys', 'November 30, 2004 ']\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "['4146.txt', 'Diary of Samuel Pepys, January/February 1663/64', 'Samuel Pepys', 'November 30, 2004 ']\n",
       "['42466-8.txt', 'Facts and fancies in modern science', 'John William Dawson', 'April 3, 2013 ']\n",
       "['3629.txt', 'The Titan', 'Theodore Dreiser', 'January, 2003']\n",
       "['40647.txt', 'Little Greta of Denmark', 'Bernadine Bailey', 'September 2, 2012 ']\n",
@@ -18464,7 +18458,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.3"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
