use tfidf per genre

--- a/src/ml.ipynb
+++ b/src/ml.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,14 +13,58 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using TensorFlow backend.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " Dataset :: namedtuple(\n",
+      "  'info': pandas.df\n",
+      "  'labels': pandas.df('filename.txt': 'genre')\n",
+      "  'book_sentiment_words_list': ['filename']\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "import config"
+    "import config, data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['title', 'filename', 'title.1', 'author', 'release year', 'genre',\n",
+       "       'pos score', 'neg score', 'neu score', 'comp score', 'amt pos',\n",
+       "       'amt neg'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# info = pandas.read_csv(config.dataset_dir + 'final_data.csv')\n",
+    "dataset = data.init_dataset()\n",
+    "dataset.info.keys()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1298,80 +1342,47 @@
        "[958 rows x 12 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "info = pandas.read_csv(config.dataset_dir + 'final_data.csv')\n",
-    "info"
+    "dataset.info"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['title', 'filename', 'title.1', 'author', 'release year', 'genre',\n",
-       "       'pos score', 'neg score', 'neu score', 'comp score', 'amt pos',\n",
-       "       'amt neg'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "info.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "sentiment_words = os.listdir(config.dataset_dir + 'output/sentiment_word_texts')"
+    "book_sentiment_list = os.listdir(config.dataset_dir + 'output/sentiment_word_texts')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['45557-0.txt',\n",
-       " '45557-8.txt',\n",
-       " '45557.txt',\n",
-       " '45564.txt',\n",
-       " '45631-8.txt',\n",
-       " '45631.txt',\n",
-       " '45640-8.txt',\n",
-       " '45640.txt',\n",
-       " '45645-8.txt',\n",
-       " '45645.txt']"
+       "'1005.txt'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sentiment_words"
+    "book_sentiment_list[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1382,16 +1393,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = {} # {bookname: genre}\n",
-    "for filename in sentiment_words[:20:\n",
+    "\n",
+    "labels = {} # {bookname: genre}\n",
+    "for filename in dataset.book_sentiment_words_list[:20]:\n",
     "    # name = filename.split('.')[0]\n",
     "    book = info.loc[info['filename'] == filename]\n",
-    "    genre = book.genre.item()                            \n",
-    "    #      'pos score', 'neg score', 'neu score', 'comp score', 'amt pos','amt neg'"
+    "    genre = book.genre.item()\n",
+    "    labels[str(filename)] = genre"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'1005.txt': 'Christian fiction',\n",
+       " '1024.txt': 'Adventure novel',\n",
+       " '1027.txt': 'Western novel',\n",
+       " '103.txt': 'Travel literature',\n",
+       " '1051.txt': 'Comic novel',\n",
+       " '1056.txt': 'Künstlerroman',\n",
+       " '106.txt': 'Adventure novel',\n",
+       " '1065.txt': 'Fantasy novel',\n",
+       " '1066-0.txt': \"Children's literature\",\n",
+       " '1074-0.txt': 'Adventure novel',\n",
+       " '1076.txt': 'Fantasy',\n",
+       " '108.txt': 'Detective fiction',\n",
+       " '1080.txt': 'Satire',\n",
+       " '1081.txt': 'Political',\n",
+       " '111.txt': \"Children's literature\",\n",
+       " '113.txt': \"Children's literature\",\n",
+       " '1138.txt': 'Novel',\n",
+       " '1142.txt': 'Young adult novel',\n",
+       " '1153.txt': 'Science fantasy',\n",
+       " '1156.txt': 'Satire'}"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "labels"
    ]
   },
   {
@@ -1415,6 +1466,13 @@
     "data = info.loc[info['filename'] == s]\n",
     "genre = data.genre.item()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
